# Vertick-IME

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  PRIVACY.md  README.md  README_CN.md  README_EN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  keystore.properties.example  local.properties.example  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/release-notes/: v0.1.1.md  v0.1.2.md  v0.1.3.md  v1.2.0.md  v1.2.1.md  v1.2.2.md  v1.2.3.md  v1.2.4.md  v1.2.9.md  v1.3.0.md  v1.3.1.md  v1.3.2.md  v1.4.0.md  v1.4.1.md  v1.4.2.md  v1.4.3.md
.github/workflows/: build-dictionary-packs.yml  quality.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/english/: en.dict.yaml
app/src/main/assets/licenses/: THIRD_PARTY_NOTICES.txt
app/src/main/assets/rime/: default.yaml  weike_pinyin.dict.yaml  weike_pinyin.schema.yaml  weike_t9.schema.yaml  weike_terms.dict.yaml
app/src/main/cpp/: CMakeLists.txt  JiebaBridge.cpp
app/src/main/res/drawable/: ic_lucide_arrow_big_up.xml  ic_lucide_arrow_big_up_dash.xml  ic_lucide_at_sign.xml  ic_lucide_audio_lines.xml  ic_lucide_book_open.xml  ic_lucide_chevron_down.xml  ic_lucide_chevron_left.xml  ic_lucide_chevron_right.xml  ic_lucide_circle_help.xml  ic_lucide_clipboard.xml  ic_lucide_clipboard_list.xml  ic_lucide_clock_3.xml  (+19 more)
dictionaries/: SOURCE_LOCK.md  manifest.json
scripts/: DictionaryManifestSigner.java  build-dictionary-pack.ps1  build-prediction-index.ps1  build-rime-deployer.ps1  build-rime-jni.ps1  prepare-github-signing-secrets.ps1
(+45 files in other folders)
